--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ ipython_config.py
 # pyenv
 .python-version
 
-# celery beat schedule file
+# celerywork beat schedule file
 celerybeat-schedule
 
 # SageMath parsed files
